--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'static/css/bootstrap.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'static/css/main.css' %}">
 </head>
 <body>
