--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,15 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="{% static 'static/css/bootstrap.css' %}">
+    <script src="{% static 'static/jQuery/jquery-3.1.1.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'static/lightbox/css/lightbox.css' %}">
+    <script src="{% static 'static/lightbox/js/lightbox.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'static/jquery-ui-1.12.1.custom/jquery-ui.css' %}">
+    <script src="{% static 'static/jquery-ui-1.12.1.custom/external/jquery/jquery.js' %}"></script>
+    <script src="{% static 'static/jquery-ui-1.12.1.custom/jquery-ui.js' %}"></script>
+    <script src="{% static 'static/js/main.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'static/css/main.css' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.js"></script>
 </head>
 <body>
     {% block menu %}
