--- a/templates/main.html
+++ b/templates/main.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'static/css/bootstrap.css' %}">
-    <script src="{% static 'static/jQuery/jquery-3.1.1.js' %}"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script
     <link rel="stylesheet" href="{% static 'static/lightbox/css/lightbox.css' %}">
     <script src="{% static 'static/lightbox/js/lightbox.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'static/jquery-ui-1.12.1.custom/jquery-ui.css' %}">
-    <script src="{% static 'static/jquery-ui-1.12.1.custom/external/jquery/jquery.js' %}"></script>
-    <script src="{% static 'static/jquery-ui-1.12.1.custom/jquery-ui.js' %}"></script>
+    <script
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+  integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
+  crossorigin="anonymous"></script>
     <script src="{% static 'static/js/main.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'static/css/main.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.js"></script>
