Hooked postgresql, little fix code

--- a/imageboard/templates/index.html
+++ b/imageboard/templates/index.html
@@ -2,12 +2,12 @@
 
 {% block index %}
     <div class="board_center_text">
-        <h1><a class="mainlogo link_color_all" href="{% url 'index' %}"><b>Два.ч</b></a></h1>
+        <h1><a class="mainlogo link_color_all" href="{% url 'index' %}"><b>Почти Два.ч</b></a></h1>
         <p class="link_color_all">Добро пожаловать. Снова.</p>
     </div>
     <div class="container">
         <div class="container_index_text">
-            <p class="text_container">Глупый текст</p>
+            <p class="text_container">Умный текст</p>
         </div>
     </div>
     <div class="container">
