--- a/templates/main.html
+++ b/templates/main.html
@@ -118,5 +118,6 @@
     {% block contacts %}{% endblock %}
     {% block board %}{% endblock %}
     {% block thread %}{% endblock %}
+    {% block search %}{% endblock %}
 </body>
 </html>
