fix email and localtime

--- a/imageboard/templates/contacts.html
+++ b/imageboard/templates/contacts.html
@@ -15,9 +15,6 @@
         <p>Здесь какой-то умный текст большими буквами</p>
     </div>
     <div class="container container_contacts">
-        <p>Моя почта</p>
-    </div>
-    <div class="container container_contacts">
-        <p>Мой твиттер</p>
+        <p>Моя почта: <a href="mailto:mr.ars156@gmail.com" class="link_color_all">mr.ars156@gmail.com</a></p>
     </div>
 {% endblock %}
